# complate-cpp-for-python

./: .clang-format  .gitignore  .release-it.json  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  USER_GUIDE.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  release.yml
cmake/: Complate.cmake  PyBind11.cmake
src/complatecpp/: __init__.py  module.cpp  reevaluatingrenderer.py
src/complatecpp/addd/: __init__.py  reevaluatingrenderer.py
src/complatecpp/core/: pystream.h
src/core/: CMakeLists.txt  core.cpp  function.h  renderer.h  stream.h  stringstream.h  value.h
src/quickjs/: CMakeLists.txt  prototypes.cpp  prototypes.h  quickjs.cpp  quickjsrenderer.h  quickjsrendererbuilder.h
src/utils/: mapper.cpp  mapper.h
test/: conftest.py  test_function.py  test_quickjsrenderer.py  test_quickjsrendererbuilder.py  test_reevaluatingrenderer.py  test_stream.py  test_stringstream.py
test/fixtures/: __init__.py  assets.py  encoder.py  teststream.py  timespan.py  todo.py
test/resources/: todolist.html  views.js  views.mock.js
views/: index.js  todolist.jsx
