[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.14",
    "scikit-build",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "test",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "python -m pytest {project}/test"
archs = ["native"]
skip = ["pp37-win*", "pp37-macosx*"]
