[metadata]
name=complate-cpp-for-python
author=Torsten Mehnert
author_email=torsten.mhn@gmail.com
home_page=https://github.com/tmehnert/complate-cpp-for-python
description=Python bindings for complate-cpp
long_description = file: README.md
long_description_content_type=text/markdown
license=Apache-2.0
