[metadata]
name = complate-cpp-for-python
author = Torsten Mehnert
author_email = torsten.mhn@gmail.com
home_page = https://github.com/tmehnert/complate-cpp-for-python
description = Rendering of JSX based views in Python
project_urls =
    Documentation = https://github.com/tmehnert/complate-cpp-for-python/blob/main/USER_GUIDE.md
    Source Code = https://github.com/tmehnert/complate-cpp-for-python
    Bug Tracker = https://github.com/tmehnert/complate-cpp-for-python/issues
    Changelog = https://github.com/tmehnert/complate-cpp-for-python/blob/main/CHANGELOG.md
long_description = file: README.md
keywords = jsx, html, template-engine
long_description_content_type=text/markdown
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: C++
    Programming Language :: C
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Text Processing :: Markup :: HTML

[options]
python_requires = >= 3.6
